# Bazel-Android

./: README.md
android/tutorial/: BUILD  WORKSPACE
android/tutorial/src/main/: BUILD
android/tutorial/src/main/java/com/example/bazel/: AndroidManifest.xml  BUILD  Greeter.java  Greeter.kt  GreeterViewModel.java  MainActivity.java  MainActivity.kt  MainActivityTest.java  TestManifest.xml
android/tutorial/src/main/java/com/example/bazel/res/layout/: activity_main.xml
android/tutorial/src/test/: BUILD  BUILD.bazel  TestManifest.xml
